--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
+    "axios": "^0.21.1",
     "boxicons": "^2.0.7",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
