--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MaizovacUI",
+  "name": "maizovac-ui",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,32 +12,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^2.0.1",
-    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
-    "@nuxtjs/axios": "^5.13.1",
-    "axios": "^0.21.1",
-    "boxicons": "^2.0.7",
-    "core-js": "^3.8.3",
-    "nuxt": "^2.14.12",
+    "@nuxt/builder-edge": "^2.16.0-27720022.54e852f",
+    "@nuxt/cli-edge": "^2.16.0-27720022.54e852f",
+    "@nuxt/core-edge": "^2.16.0-27720022.54e852f",
+    "@nuxt/typescript-runtime": "^2.1.0",
+    "@nuxtjs/auth-next": "^5.0.0-1613647907.37b1156",
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.21.4",
+    "boxicons": "^2.1.4",
+    "core-js": "^3.26.1",
+    "nuxt": "^3.0.0",
     "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.12",
+    "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.0.4",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue/test-utils": "^1.1.2",
-    "babel-core": "7.0.0-bridge.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
+    "@vue/test-utils": "^1.3.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.18.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.5.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.20.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.4.4",
-    "vue-jest": "^3.0.4"
+    "prettier": "^2.8.1",
+    "ts-jest": "^26.5.6",
+    "vue-jest": "^3.0.7"
   }
 }
